# faCtMCP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
cmake/: faCtMCPConfig.cmake.in
examples/: example_server_utils.cpp  example_server_utils.h  stdio_code_suite.cpp  stdio_echo.cpp  stdio_filesystem_suite.cpp  stdio_math.cpp
include/: factmcp.h
src/capi/: factmcp_capi.cpp
src/editor_core/: FileIO.cpp  FileIO.h
src/mcp/: FastMCPServer.cpp  FastMCPServer.h  InjectionQueue.cpp  InjectionQueue.h  JsonUtils.cpp  JsonUtils.h  ToolDefinitions.cpp  ToolDefinitions.h  ToolState.cpp  ToolState.h
src/mcp/handlers/: AnalyzeHandler.cpp  AnalyzeHandler.h  BuildHandler.cpp  BuildHandler.h  FilesystemHandlers.cpp  FilesystemHandlers.h  GitHandler.cpp  GitHandler.h  GlobHandler.cpp  GlobHandler.h  GrepHandler.cpp  GrepHandler.h  MemoryHandler.cpp  MemoryHandler.h  ProjectHandler.cpp  ProjectHandler.h  RefactorHandler.cpp  RefactorHandler.h  SymbolsHandler.cpp  SymbolsHandler.h
tests/: test_http_server.cpp  test_stdio_client.cpp
tools/: smoke_client.cpp
